--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@sendgrid/mail": "^7.4.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.1"
+    "express-handlebars": "^5.2.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
